plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.11.4'
}

group = 'cn.projectan'
version = '3.0.0'
description = 'Strix'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven { url = "https://maven.aliyun.com/repository/public" }
    maven { url = "https://maven.aliyun.com/repository/central" }
    maven { url = "https://maven.aliyun.com/repository/gradle-plugin" }
    mavenCentral()
}

bootJar {
    // 可直接运行的Jar文件
    archiveFileName = "Strix.jar"

    // 将版本号写入 MANIFEST.MF
    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Implementation-Vendor': project.group
        )
    }
}

// 屏蔽部分依赖传递
configurations.configureEach {
    exclude group: 'commons-logging', module: 'commons-logging'
    exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
}

dependencyManagement {
    imports {
        mavenBom "com.baomidou:mybatis-plus-bom:3.5.15"
    }
}

dependencies {
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    testAnnotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.redisson:redisson-spring-boot-starter:4.0.0'
    // Database - MySQL
    developmentOnly 'p6spy:p6spy:3.9.1'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'com.baomidou:mybatis-plus-spring-boot3-starter'
    implementation 'com.baomidou:mybatis-plus-jsqlparser'
    implementation 'com.baomidou:mybatis-plus-generator'
    developmentOnly 'org.apache.velocity:velocity-engine-core:2.4.1'
    // Quartz
    implementation('org.quartz-scheduler:quartz') {
        exclude group: 'com.mchange', module: 'c3p0'
    }
    // Other Tools
    implementation 'com.squareup.okhttp3:okhttp:5.3.2'
    implementation 'cn.hutool:hutool-core:5.8.42'
    implementation 'cn.hutool:hutool-json:5.8.42'
    implementation 'cn.hutool:hutool-crypto:5.8.42'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.83'
    implementation 'org.lionsoul:ip2region:2.7.0'
    implementation 'com.github.xiaoymin:knife4j-openapi3-jakarta-spring-boot-starter:4.5.0'
    // S3
    implementation platform("software.amazon.awssdk:bom:2.40.9")
    implementation "software.amazon.awssdk:s3"
    // Third Party
    implementation("com.aliyun:dysmsapi20170525:4.3.1") {
        exclude group: "com.aliyun", module: "tea-xml"
    }
    implementation 'com.alipay.sdk:alipay-sdk-java:4.40.13.ALL'
    implementation('com.github.javen205:IJPay-AliPay:2.9.10-17') {
        exclude group: 'com.alipay.sdk', module: 'alipay-sdk-java'
        exclude group: 'cn.hutool', module: 'hutool-json'
        exclude group: 'cn.hutool', module: 'hutool-crypto'
    }
    implementation('com.github.javen205:IJPay-WxPay:2.9.10-17') {
        exclude group: 'cn.hutool', module: 'hutool-json'
        exclude group: 'cn.hutool', module: 'hutool-crypto'
    }

    // GraalVM
    compileOnly 'org.graalvm.sdk:graal-sdk:24.1.1'
}

test {
    useJUnitPlatform()
}

// 禁用测试 AOT 处理
tasks.named('processTestAot') {
    enabled = false
}

// 直接运行时, 跳过 AOT 编译
gradle.taskGraph.whenReady { taskGraph ->
    if (taskGraph.hasTask(':cn.projectan.strix.StrixApplication.main()')
            || taskGraph.hasTask(':cn.projectan.strix.MysqlGenerator.main()')
            || taskGraph.hasTask(':cn.projectan.strix.ClickHouseGenerator.main()')
    ) {
        taskGraph.allTasks.each { task ->
            if (task.name.toLowerCase().contains('aot')) {
                task.enabled = false
                println "[Strix] 当前非构建任务, 已跳过任务链 ${task.path}"
            }
        }
    }
}

def nativeImageBuildArgs = [
        '-H:+AddAllCharsets',
        '--enable-url-protocols=http',
        '--enable-url-protocols=https',
        '--features=cn.projectan.strix.aot.LambdaRegistrationFeature',
        '--features=cn.projectan.strix.aot.BouncyCastleFeature',
        '--initialize-at-build-time=cn.hutool.core.util.CharsetUtil',
        '--initialize-at-build-time=cn.hutool.core.convert.BasicType',
        '--initialize-at-build-time=cn.hutool.core.util.ClassLoaderUtil',
        '--initialize-at-run-time=sun.net.dns.ResolverConfigurationImpl',
        '--initialize-at-run-time=org.bouncycastle.crypto.prng.SP800SecureRandom',
        '--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG$Default',
        '--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG$NonceAndIV',
        '-H:IncludeResources="logback.xml"',
//        '-H:IncludeResources=".*/?.*properties$"',
//        '-H:IncludeResources=".*/?.*xml$"',
//        '-H:IncludeResources=".*/?.*json$"',
//        '-H:IncludeResources=".*/?.*xdb$"',
//        '-H:IncludeResources=".*/?.*types$"',
//        '-H:IncludeResources=".*/?.*png$"',
//        '-H:IncludeResources=".*/?.*jpg$"',
//        '-H:IncludeResources=".*/?.*jpeg$"'
]

tasks.named('bootBuildImage') {
    imageName = 'projectan.cn/strix:latest'
    builder = "paketobuildpacks/builder-jammy-base:latest"
    buildpacks = ["gcr.io/paketo-buildpacks/java-native-image:latest"]
    docker {
        host = 'tcp://192.168.31.99:2375'
        tlsVerify = false
    }
    environment = [
            'BP_NATIVE_IMAGE'                : 'true',
            'BP_NATIVE_IMAGE_BUILD_ARGUMENTS': nativeImageBuildArgs.join(' ')
//            'BP_NATIVE_IMAGE_BUILD_ARGUMENTS': '-H:+AddAllCharsets --enable-url-protocols=http --enable-url-protocols=https --features=cn.projectan.strix.aot.LambdaRegistrationFeature --features=cn.projectan.strix.aot.BouncyCastleFeature  --initialize-at-build-time=cn.hutool.core.util.CharsetUtil --initialize-at-build-time=cn.hutool.core.convert.BasicType --initialize-at-build-time=cn.hutool.core.util.ClassLoaderUtil --initialize-at-run-time=sun.net.dns.ResolverConfigurationImpl --rerun-class-initialization-at-runtime=org.bouncycastle.crypto.prng.SP800SecureRandom --rerun-class-initialization-at-runtime=org.bouncycastle.jcajce.provider.drbg.DRBG$Default --rerun-class-initialization-at-runtime=org.bouncycastle.jcajce.provider.drbg.DRBG$NonceAndIV -H:IncludeResources=".*/?.*properties$" -H:IncludeResources=".*/?.*xml$" -H:IncludeResources=".*/?.*json$" -H:IncludeResources=".*/?.*xdb$" -H:IncludeResources=".*/?.*types$" -H:IncludeResources=".*/?.*png$" -H:IncludeResources=".*/?.*jpg$" -H:IncludeResources=".*/?.*jpeg$"',
    ]
}

graalvmNative {
    binaries {
        main {
//            buildArgs.add('--verbose')
            buildArgs.add('--no-fallback')
//            buildArgs.add('-H:Log=registerResource:1')
            buildArgs.add('-H:+UnlockExperimentalVMOptions')
            buildArgs.addAll(nativeImageBuildArgs)
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
//    options.compilerArgs << "-Xlint:unchecked"
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
